# FileSyncTool

./: .gitignore  .tree  CMakeLists.txt  Dockerfile  README.md  tree
python_ui/: gui.py
src/: main.cpp
src/core/: Loggerd.cpp  conflict_resolver.cpp  file_transfer.cpp  file_watcher.cpp
src/mode/: file_check.cpp  local.cpp  remote.cpp
src/network/: client.cpp  server.cpp
